<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.google.developers.mojimaster2.MainActivity">

    <item
        android:id="@+id/action_list"
        android:orderInCategory="1"
        android:title="@string/action_list_emoji"
        android:icon="@drawable/ic_list"
        app:showAsAction="always" />

    <item android:id="@+id/action_add"
          android:orderInCategory="2"
          android:title="@string/action_add_emoji"
          android:icon="@drawable/ic_add_circle"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="never"/>

</menu>