<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSmileyActivity">

    <androidx.emoji.widget.EmojiAppCompatEditText
        android:id="@+id/emoji_char"
        android:layout_width="126dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073"
        android:maxLength="2"
        android:minWidth="170dp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        android:inputType="textShortMessage"
        tools:text="🙊"/>

    <TextView
        android:id="@+id/compare"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/equal_sign"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/emoji_char"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toEndOf="@+id/emoji_char"
        app:layout_constraintTop_toTopOf="@+id/emoji_char"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/emoji_unicode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:minWidth="130dp"
        android:textAllCaps="true"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/compare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/compare"
        app:layout_constraintVertical_bias="0.0"
        android:text="U+1F64A" />

    <EditText
        android:hint="@string/cldr_short_name"
        android:id="@+id/emoji_name"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoji_char"
        app:layout_constraintVertical_bias="0.032"
        tools:layout_editor_absoluteX="-16dp" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:drawableLeft="@drawable/ic_save"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emoji_name"/>


</androidx.constraintlayout.widget.ConstraintLayout>

